--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,7 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+/Arduino_ObservingConditions/Arduino ObservingConditions Setup.exe
+/Arduino_ObservingConditions/Arduino ObservingConditions Setup.iss
+/Arduino_ObservingConditions/Arduino ObservingConditions Test.js
+/Arduino_ObservingConditions/Readme.txt
